Update account mapping with actual Lunch Money account IDs

--- a/config/account-mapping.json
+++ b/config/account-mapping.json
@@ -1,6 +1,6 @@
 {
-    "Maybank MAE": "",
-    "Grab": "",
-    "TNG eWallet": "",
-    "ShopeePay": ""
+    "Maybank MAE": "246029",
+    "Grab": "246042",
+    "TNG eWallet": "246066",
+    "ShopeePay": "246046"
 }
