feat(observability): integrate OpenTelemetry distributed tracing with SigNoz
- Add OpenTelemetry SDK and auto-instrumentation packages
- Create tracing infrastructure (tracing.ts, tracing-utils.ts)
- Instrument webhook route to capture request payloads and transformations
- Instrument transaction processor with spans for each processing step:
  * Filter by app
  * AI extraction with Gemini
  * Account mapping
  * Location enrichment with GPS
  * Budget sync with Lunch Money
- Enable auto-instrumentation for external API calls (HTTP/HTTPS)
- Add OTEL configuration to .env.example
- Connect docker-compose to signoz-net network for trace export
- Configure OTLP HTTP exporter to send traces to otel-collector:4318

This provides full end-to-end traceability from webhook ingestion to
transaction completion, with all data transformations and API calls
visible in SigNoz for debugging and performance monitoring.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - ./config:/app/config:ro
     networks:
       - duitmyself-network
+      - signoz-net
     healthcheck:
       test: [ "CMD", "bun", "run", "-e", "fetch('http://localhost:3000/health').then(r => r.ok ? process.exit(0) : process.exit(1))" ]
       interval: 30s
@@ -34,3 +35,6 @@ services:
 networks:
   duitmyself-network:
     driver: bridge
+  signoz-net:
+    external: true
+    name: signoz-net
