--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Retry Configuration
 API_RETRY_LIMIT=3
 API_RETRY_BACKOFF_MS=10000
+
+# OpenTelemetry / SigNoz Configuration
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+OTEL_SERVICE_NAME=duitmyself-app
+OTEL_TRACES_SAMPLER=always_on
