feat(observability): add OpenTelemetry log ingestion with trace correlation
- Install pino-opentelemetry-transport for log export
- Configure Pino to send logs to OTLP endpoint in production
- Enable PinoInstrumentation to inject trace context into logs
- Add trace_id, span_id, and trace_flags to log records
- Configure log transport to use same OTLP endpoint as traces

This enables full log-trace correlation in SigNoz, allowing users to
view all logs associated with a specific trace for complete debugging
context.

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,6 @@ API_RETRY_LIMIT=3
 API_RETRY_BACKOFF_MS=10000
 
 # OpenTelemetry / SigNoz Configuration
-OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+OTEL_EXPORTER_OTLP_ENDPOINT=http://infra-signoz-otel-collector-1:4318
 OTEL_SERVICE_NAME=duitmyself-app
 OTEL_TRACES_SAMPLER=always_on
