--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
     "@opentelemetry/exporter-trace-otlp-http": "^0.208.0",
+    "@opentelemetry/instrumentation-pino": "^0.55.1",
     "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.208.0",
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "hono": "^4.0.0",
     "ky": "^1.2.0",
     "pino": "^8.17.0",
+    "pino-opentelemetry-transport": "^2.0.0",
     "pino-pretty": "^10.3.0",
     "zod": "^3.22.0"
   },
