feat: implement CC statement service with Notion and Telegram integration
- Add CC statement service to automate monthly credit card statement creation
- Implement Notion adapter for fetching credit cards and creating statements
- Implement Telegram adapter for sending notifications
- Add date calculation logic ported from n8n workflow
- Add duplicate detection to prevent creating existing statements
- Add API endpoint POST /jobs/cc-statements for manual triggering
- Add comprehensive unit tests for date calculation and duplicate detection
- Update documentation in README.md and AGENTS.md
- Reorganize HTTP test files into feature-based structure
- Fix timezone handling in date formatting
- Fix Notion SDK v5+ API calls (dataSources.query, data_source_id)
- Fix property name case sensitivity for 'Due In (Days)'

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,11 @@ API_RETRY_BACKOFF_MS=10000
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel.obliquetitan.com
 OTEL_SERVICE_NAME=duitmyself-app
 OTEL_TRACES_SAMPLER=always_on
+
+# CC Statement Service
+NOTION_API_KEY=your_notion_api_key_here
+NOTION_CC_DATABASE_ID=2354fc10333980c1bcd1e9f796486d6c
+NOTION_STATEMENTS_DATABASE_ID=2354fc1033398059b218d5c397f63698
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
+TIMEZONE=Asia/Kuala_Lumpur
