--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "@notionhq/client": "^5.6.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.208.0",
     "@opentelemetry/auto-instrumentations-node": "^0.67.3",
@@ -31,6 +32,7 @@
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "hono": "^4.0.0",
     "ky": "^1.2.0",
+    "node-telegram-bot-api": "^0.67.0",
     "pino": "^8.17.0",
     "pino-http-send": "^0.4.2",
     "pino-opentelemetry-transport": "^2.0.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^25.0.3",
+    "@types/node-telegram-bot-api": "^0.64.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.56.0",
