feat(telegram): add conversational transaction capture via Telegram bot
- Add Telegram bot adapter with full API integration (sendMessage, editMessage, answerCallbackQuery)
- Implement conversation state manager for tracking pending transactions
- Create account selection service with multi-factor matching (package name, keywords, merchant patterns)
- Migrate account mapping to enhanced configuration with labels, icons, tags
- Add conversation handler service for screenshot  AI  account  confirm  create flow
- Create Telegram webhook routes (/webhook/telegram and /webhook/telegram/screenshot)
- Wire up all services in index.ts with periodic cleanup
- Add comprehensive setup guides (TELEGRAM_SETUP.md, MACRODROID_SETUP.md)
- Update environment configuration for Telegram bot credentials

Features:
- Smart account detection with scoring system (100/80/50/10 points)
- Beautiful inline keyboards with icons and labels
- Conversation flow with edit/cancel options
- MacroDroid integration for automatic screenshot capture
- In-memory state storage with auto-cleanup (upgradeable to Redis)

Breaking changes: None (additive feature)

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ NOTION_STATEMENTS_DATABASE_ID=2354fc1033398059b218d5c397f63698
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 TIMEZONE=Asia/Kuala_Lumpur
+
+# Telegram Bot (Expense Tracker)
+# Get bot token from @BotFather, chat ID from @userinfobot
+TELEGRAM_EXPENSE_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_EXPENSE_CHAT_ID=your_telegram_chat_id_here
